override.css
/* ... */
div#pageContent table:nth-of-type(2) tbody > tr > td[colspan="2"] > table[width] > tbody {
}

div#pageContent > div table:first-of-type form {
    /* outline: 2px solid rgba(0,0,255,0.3); */
}

tr:has(>td.formLabel) td, tr:has(>td.noWrap) td {
    height: 40px;
    /* align-content: baseline; */
    padding: 0 16px !important;
}

table.resultsPaginationContent table.tableStyle tbody tr.topAlign {
    /* outline: 10px solid pink; */
    table-layout: fixed;
    /* width: -webkit-fill-available; */
    display: table-row;
    white-space: nowrap;
}

table.resultsPaginationContent table.tableStyle tbody tr.topAlign th {
    left: 0 !important;
}

table.resultsPaginationContent table.tableStyle {
    margin-bottom: 0 !important;
}
table.resultsPaginationContent table.tableStyle td:last-of-type, table.resultsPaginationContent table.tableStyle th:last-of-type {
    border-right: none !important;
}

td:has(>#label_displayDate) {
    display: inline-grid;
    flex-direction: column;
}
td:has(>#label_displayDate) {
}
td[colspan] > table[width].tableStyle > tbody tr:has(>td) td:nth-of-type(2) {
    /* outline: 5px solid blue; */
    height: 96px;
    padding-bottom: 16px;
    display: flex;
    align-items: flex-end;
}

table.roundedResultsTable td.formlabel {
    width: 50%;
}

table.roundedResultsTable {}

table.roundedResultsTable > tbody > tr:has(td) {
    display: flex;
}

td.textAlignRight {
    justify-content: revert-layer;
}

.medRowHgt,
.smRowHgt,
.prelimRowHgt {
    height: auto !important;
}

.xlRowHgtAppReg {
    height: auto !important;
}

/* Root Question List */

#rootQuestionsTable {
  table-layout: auto !important;
}
.alternateQuestion img,
.requireQuestion img {
  filter: saturate(50%) hue-rotate(180deg);
}

.buttonContainerTop.left > * {
  display: inline-block !important;
}

